kubernetes/apps/rocketchat/nfs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-provisioner-rocketchat
  labels:
    app: nfs-provisioner-rocketchat
  namespace: home-apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-provisioner-rocketchat
  template:
    metadata:
      labels:
        app: nfs-provisioner-rocketchat
    spec:
      serviceAccountName: nfs-provisioner
      containers:
        - name: nfs-provisioner-rocketchat
          image: registry.k8s.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2
          volumeMounts:
            - name: nfs-rocketchat-attachments-root
              mountPath: /persistentvolumes
      volumes:
        - name: nfs-rocketchat-attachments-root
          nfs:
            server: <NFS_SERVER_IP>
            path: /tank/rocketchat-attachments
