kubernetes/apps/rocketchat/mongo.yml

apiVersion: v1
kind: Service
metadata:
  name: rocketmongo
  namespace: home-apps
  labels:
    app: rocketmongo
spec:
  selector:
    app: rocketmongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocketmongo
  namespace: home-apps
spec:
  serviceName: rocketmongo
  replicas: 3
  selector:
    matchLabels:
      app: rocketmongo
  template:
    metadata:
      labels:
        app: rocketmongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: rocketmongo
          image: mongo:7.0
          command:
          - mongod
          - "--bind_ip_all"
          - "--replSet"
          - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: "local-storage"
