kubernetes/apps/rocketchat/rocketchat.yml

apiVersion: v1
kind: Service
metadata:
  name: rocketchat-server
  namespace: home-apps
spec:
  selector:
    app: rocketchat-server
  ports:
    - name: http
      port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-server
  namespace: home-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-server
  template:
    metadata:
      labels:
        app: rocketchat-server
    spec:
      containers:
        - name: rocketchat-server
          image: rocketchat/rocket.chat:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          volumeMounts:
          - name: rocketchat-attachments-volume
            mountPath: /app/uploads
      volumes:
          - name: rocketchat-attachments-volume
            persistentVolumeClaim:
              claimName: rocketchat-attachments
